--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.19.0",
     "bootstrap": "^4.4.1",
     "minhas-series-server": "https://github.com/tuliofaria/minhas-series-server",
+    "npm-run-all": "^4.1.5",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
@@ -16,7 +17,9 @@
     "reactstrap": "^8.2.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "npm-run-all buid start-server",
+    "start-react": "react-scripts start",
+    "start-server": "node node_modules/minhas-series-server/index.j",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
